Name:           hobgoblin
Version:        0.1.1
Cabal-Version:  >= 1.6
Copyright:      Copyright (C) 2012 Zachary Weaver
license:        BSD3
License-File:   LICENSE
Synopsis:       Very small monster slaying game using SDL
Description:    Very small monster slaying game using SDL
Category:       Game
Author:         Zachary S. Weaver
Maintainer:     Zachary S. Weaver <zaw6@pitt.edu>
Stability:      alpha
Homepage:       http://github.com/zearen-wover/Hobgoblin
Build-Type:     Simple

Data-Files:
    res/Boot_7x7.png
    res/Coin_7x7.png
    res/Hobgoblin_20x40.png
    res/HobSkull_7x7.png
    res/Man_20x40.png
    res/ManWithShield_20x40.png
    res/Shield_20x40.png
    res/georgia.ttf

Extra-Source-Files:
    GameSpace.hs
    Plane.hs
    Util.hs

Executable hobgoblin
    Main-IS: Main.hs
    Build-Depends:
        base >= 4 && < 5,
        mtl,
        transformers,
        containers,
        random,
        data-lens,
        data-lens-template,
        SDL,
        SDL-image,
        SDL-ttf
    GHC-Options: -O2
    Other-Modules: GameSpace Plane Util
